# elasticgpt-bigquery-connector

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
app/: __init__.py  main.py
app/config/: __init__.py  logging_config.py  settings.py
app/services/: __init__.py  bigquery.py  elasticsearch.py  embeddings.py
app/utils/: __init__.py  helpers.py
data/: README.md
tests/: conftest.py  test_helpers.py
