[tool.poetry]
name = "bq-es-project"
version = "0.1.0"
description = ""
authors = ["Adhish Thite <adhish.thite@elastic.co>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "^3.25.0"
elasticsearch = "^8.15.0"
bigframes = "^1.15.0"
python-dotenv = "^1.0.1"
langchain = "^0.2"
langchain-elasticsearch = "^0.2"
openai = "<2"
langchain-openai = ">0.1.6"
langchain-community = "^0.2"
markdownify = "^0.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
