[tool.poetry]
name = "elasticgpt-bigquery-connector"
version = "0.1.0"
description = "This is a connector for ElasticGPT to ingest data from BigQuery. The data is ingested into ElasticGPT's vector database."
authors = ["Adhish Thite <adhish.thite@elastic.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "^3.25.0"
elasticsearch = "^8.15.0"
bigframes = "^1.15.0"
python-dotenv = "^1.0.1"
langchain = "^0.2"
langchain-elasticsearch = "^0.2"
openai = "<2"
langchain-openai = ">0.1.6"
langchain-community = "^0.2"
markdownify = "^0.12"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
